; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_mm.c_drm_mm_takedown.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_mm.c_drm_mm_takedown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_mm = type { i32 }

@.str = private unnamed_addr constant [43 x i8] c"Memory manager not clean during takedown.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @drm_mm_takedown(%struct.drm_mm* %0) #0 {
  %2 = alloca %struct.drm_mm*, align 8
  store %struct.drm_mm* %0, %struct.drm_mm** %2, align 8
  %3 = load %struct.drm_mm*, %struct.drm_mm** %2, align 8
  %4 = call i32 @drm_mm_clean(%struct.drm_mm* %3)
  %5 = icmp ne i32 %4, 0
  %6 = xor i1 %5, true
  %7 = zext i1 %6 to i32
  %8 = call i64 @WARN(i32 %7, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load %struct.drm_mm*, %struct.drm_mm** %2, align 8
  %12 = call i32 @show_leaks(%struct.drm_mm* %11)
  br label %13

13:                                               ; preds = %10, %1
  ret void
}

declare dso_local i64 @WARN(i32, i8*) #1

declare dso_local i32 @drm_mm_clean(%struct.drm_mm*) #1

declare dso_local i32 @show_leaks(%struct.drm_mm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
